--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,10 +7,9 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.11"
-fastapi = {extras = ["all"], version = "^0.95.1"}
-uvicorn = {extras = ["standard"], version = "^0.21.0"}
 python-ulid = "^1.1.0"
 pendulum = "^2.1.2"
+flask = "^2.3.2"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.3.1"
