--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.11"
 python-ulid = "^1.1.0"
 pendulum = "^2.1.2"
 flask = "^2.3.2"
+pytest-watch = "^4.2.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.3.1"
